--- a/world/styles/one_row.css
+++ b/world/styles/one_row.css
@@ -6,15 +6,13 @@ body {
 }
 
 div {
-    width: 80%;
-    margin: 20px auto;
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
+h1, h2 {
     text-align: center;
     font-size: 24px;
     color: #333;
@@ -46,4 +44,29 @@ a {
     border-radius: 5px;
     transition: background-color 0.3s ease;
     align-content: center;
+}
+
+pre {
+    background-color: #e6e6fa;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 10px;
+    width: 80%;
+    margin: 0 auto;
+}
+
+code {
+    color: black;
+    font-size: 16px;
+}
+
+code::before,
+code::after {
+    content: '\00a0';
+}
+
+code {
+    white-space: pre-wrap;
+    font-family: 'Courier New', Courier, monospace;
+    text-align: left;
 }
