--- a/world/styles/tables.css
+++ b/world/styles/tables.css
@@ -10,7 +10,7 @@ body {
     margin: 0 auto;
 }
 
-h1 {
+h1, h2 {
     color: #333;
     text-align: center;
     margin-top: 50px;
@@ -53,4 +53,29 @@ a {
     border-radius: 5px;
     transition: background-color 0.3s ease;
     align-content: center;
+}
+
+pre {
+    background-color: #e6e6fa;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 10px;
+    width: 80%;
+    margin: 0 auto;
+}
+
+code {
+    color: black;
+    font-size: 16px;
+}
+
+code::before,
+code::after {
+    content: '\00a0';
+}
+
+code {
+    white-space: pre-wrap;
+    font-family: 'Courier New', Courier, monospace;
+    text-align: left;
 }
