Esercizio sul database "world"

--- a/world/styles/home.css
+++ b/world/styles/home.css
@@ -3,32 +3,30 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f2f2f2;
+    font-size: 16px;
 }
 
-h1 {
-    text-align: center;
-}
-
-h3 {
+h1, h3 {
     text-align: center;
 }
 
 form {
-    max-width: 400px;
-    margin: 20px auto;
+    max-width: 600px;
+    margin: 50px auto;
     background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 40px;
+    border-radius: 12px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 
 select, input[type="submit"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    width: calc(100% - 20px);
+    padding: 15px;
+    margin-bottom: 15px;
+    border: 2px solid #ccc;
+    border-radius: 8px;
     box-sizing: border-box;
+    font-size: 16px;
 }
 
 input[type="submit"] {
@@ -42,7 +40,6 @@ input[type="submit"]:hover {
     background-color: #0056b3;
 }
 
-/* CSS per rendere la prima opzione del menu a discesa non selezionabile */
 select option:first-child {
     display: none;
 }
